// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password should render Forgot Password Form component correctly 1`] = `
<div>
  <div
    class="header unauth"
  >
    <div
      class="navbar unauth-navbar"
    >
      <div
        class="page-title"
      >
        <h3>
          <a
            href="/"
          >
            BOOK-A-MEAL
          </a>
        </h3>
      </div>
    </div>
  </div>
  <div
    class="main-wrapper auth-wrapper"
  >
    <div
      class="auth"
    >
      <div
        class="title"
      >
        <h2>
          Forgot Password
        </h2>
        <h4
          class="text-info"
        >
          A link will be sent to your mail to use to reset your password
        </h4>
        <hr
          class="w-75"
        />
      </div>
      <div>
        <form>
          <div
            class="form-input"
          >
            <label
              for="email"
            >
              Your Email Address
              <span
                class="danger"
              >
                *
              </span>
            </label>
            <input
              class=""
              id="email"
              name="email"
              placeholder=""
              type="email"
              value=""
            />
             
          </div>
          <button
            class="btn btn-pri btn-block"
            disabled=""
            type="submit"
          >
            SEND ME THE LINK
          </button>
        </form>
        <p
          class="form-extra-info text-center"
        >
          <a
            href="/signin"
          >
            Sign In
          </a>
        </p>
        <p
          class="text-center"
        >
          Or
        </p>
        <p
          class="form-extra-info text-center"
        >
          Signup as a
          <a
            href="/signup?role=caterer"
          >
            Caterer
          </a>
           or a
          <a
            href="/signup?role=customer"
          >
            Customer
          </a>
        </p>
      </div>
    </div>
  </div>
  <div
    class="footer"
  >
    <p>
      © 2018. Iveren Shaguy. All images were gotten from the internet and are not mine.
    </p>
  </div>
</div>
`;

exports[`Password should render Password component that is connected to the redux store correctly 1`] = `
<div>
  <div
    class="header unauth"
  >
    <div
      class="navbar unauth-navbar"
    >
      <div
        class="page-title"
      >
        <h3>
          <a
            href="/"
          >
            BOOK-A-MEAL
          </a>
        </h3>
      </div>
    </div>
  </div>
  <div
    class="main-wrapper auth-wrapper"
  >
    <div
      class="auth"
    >
      <div
        class="title"
      >
        <h2>
          Forgot Password
        </h2>
        <h4
          class="text-info"
        >
          A link will be sent to your mail to use to reset your password
        </h4>
        <hr
          class="w-75"
        />
      </div>
      <div>
        <form>
          <div
            class="form-input"
          >
            <label
              for="email"
            >
              Your Email Address
              <span
                class="danger"
              >
                *
              </span>
            </label>
            <input
              class=""
              id="email"
              name="email"
              placeholder=""
              type="email"
              value=""
            />
             
          </div>
          <button
            class="btn btn-pri btn-block"
            disabled=""
            type="submit"
          >
            SEND ME THE LINK
          </button>
        </form>
        <p
          class="form-extra-info text-center"
        >
          <a
            href="/signin"
          >
            Sign In
          </a>
        </p>
        <p
          class="text-center"
        >
          Or
        </p>
        <p
          class="form-extra-info text-center"
        >
          Signup as a
          <a
            href="/signup?role=caterer"
          >
            Caterer
          </a>
           or a
          <a
            href="/signup?role=customer"
          >
            Customer
          </a>
        </p>
      </div>
    </div>
  </div>
  <div
    class="footer"
  >
    <p>
      © 2018. Iveren Shaguy. All images were gotten from the internet and are not mine.
    </p>
  </div>
</div>
`;

exports[`Password should render Reset Password form component correctly 1`] = `
<div>
  <div
    class="header unauth"
  >
    <div
      class="navbar unauth-navbar"
    >
      <div
        class="page-title"
      >
        <h3>
          <a
            href="/"
          >
            BOOK-A-MEAL
          </a>
        </h3>
      </div>
    </div>
  </div>
  <div
    class="main-wrapper auth-wrapper"
  >
    <div
      class="auth"
    >
      <div
        class="title"
      >
        <h2>
          Reset Your Password
        </h2>
        <hr
          class="w-75"
        />
      </div>
      <div>
        <form>
          <div
            class="form-input"
          >
            <label
              for="password"
            >
              Password
              <span
                class="danger"
              >
                *
              </span>
            </label>
            <input
              class=""
              id="password"
              name="password"
              placeholder=""
              type="password"
              value=""
            />
             
          </div>
          <div
            class="form-input"
          >
            <label
              for="passwordConfirm"
            >
              Confirm Your Password
              <span
                class="danger"
              >
                *
              </span>
            </label>
            <input
              class=""
              id="passwordConfirm"
              name="passwordConfirm"
              placeholder=""
              type="password"
              value=""
            />
             
          </div>
          <button
            class="btn btn-pri btn-block"
            disabled=""
            type="submit"
          >
            RESET PASSWORD
          </button>
        </form>
      </div>
    </div>
  </div>
  <div
    class="footer"
  >
    <p>
      © 2018. Iveren Shaguy. All images were gotten from the internet and are not mine.
    </p>
  </div>
</div>
`;
